Header alignment fix

--- a/Content/Site.css
+++ b/Content/Site.css
@@ -53,7 +53,7 @@ a:active {
 }
 
 header {
-  padding-left: 20px;
+  padding-left: 17px;
   font-family: 'Kaushan Script', 'Open Sans', Helvetica;
   font-size: 30px;
   font-weight: lighter;
